# ChatBot

./: Cargo.toml  README.txt  context.txt  example_queries.txt
chat_bot_conv/src/: lib.rs  main.rs
chat_bot_qa/src/: lib.rs
data/: cdcs_query.xml  courses.csv  dependency.csv
data/db/: CSC1000  CSC1001  CSC131  CSC161  CSC162  CSC170  CSC171  CSC172  CSC173  CSC174  CSC191  CSC200  CSC200H  CSC210  CSC211  CSC212  CSC214  CSC229  CSC240  CSC241  CSC242  CSC244  CSC246  CSC247  CSC248  CSC249  CSC252  CSC253  CSC254  CSC255  CSC256  CSC257  CSC258  CSC261  CSC262  CSC263  CSC264  CSC265  CSC273W  CSC278  (+70 more)
docs/: Makefile  body.tex  headers.tex  paper.tex  works_cited.bib
scripts/: entry_generator.py  parse_cdcs_xml.py  parse_titles.py
src/: lib.rs  main.rs
