[package]
name = "chat_bot"
version = "0.1.0"
authors = ["Adian Goldfarb <agoldfa7@u.rochester.edu>",
		   "Paul Ouellette <pouellet@u.rochester.edu>",
           "Rafaello Sanna <rsanna@u.rochester.edu>",
		   "Yiyao Yu <yyu57@u.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.14.0"
